ad detail text overflow fixed.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -597,6 +597,10 @@ nav .dropdown-menu {
 	line-height: 19px;
 	margin: 0 0 10px 0px;
 	height: 58px;
+	width:100%;
+	word-wrap:break-word;
+	overflow:hidden
+	
 }
 .margin-left-ten{
 	margin-left: 10px
